test/parser/should_fail/expr6.souc.bad

import important

main() = do
	print (expr++
end main
